# CommService

./: README.md
src/: CMakeLists.txt
src/CMakeModules/: AddFilter.cmake  ECMGenerateHeaders.cmake  GroupByDir.cmake  InStallTo.cmake  build_doxygen.cmake
src/Src/: CMakeLists.txt
src/Src/CBAClient/: CBAMainWidget.cpp  CBAMainWidget.h  CBAMainWidget.ui  CMakeLists.txt  main.cpp
src/Src/CBAClient/comm/: CCommClient.cpp  CCommClient.h
src/Src/CBAClient/login/: CBALoginWidget.cpp  CBALoginWidget.h  CBALoginWidget.ui
src/Src/CBAClient/main/: CMainPageWidget.cpp  CMainPageWidget.h  CMainPageWidget.ui
src/Src/CBAClient/main/maincontent/: CChatContentWidget.cpp  CChatContentWidget.h  CMainPageContentWidget.cpp  CMainPageContentWidget.h  CPersonalInfoWidget.cpp  CPersonalInfoWidget.h
src/Src/CBAClient/main/maintab/: CChatButton.cpp  CChatButton.h  CChatButton.ui  CChatGroupWidget.cpp  CChatGroupWidget.h  CChatGroupWidget.ui  CMainPageTabWidget.cpp  CMainPageTabWidget.h  CMainPageTabWidget.ui
src/Src/CBAClient/resourcces/: global.qrc
src/Src/CBAClient/settings/: CSettingsWidget.cpp  CSettingsWidget.h  CSettingsWidget.ui
src/Src/CBACore/: CBACore_global.h  CDBConnPool.cpp  CDBConnPool.h  CMakeLists.txt
src/Src/CBADataService/: CBADataServiceResources.h  CBADataService_global.h  CMakeLists.txt
src/Src/CBADataService/tcpservice/: CCommClient.cpp  CCommClient.h  CCommService.cpp  CCommService.h  CTcpClientHandler.cpp  CTcpClientHandler.h  CommServiceWidget.cpp  CommServiceWidget.h  CommServiceWidget.ui
src/Src/CBADataService/user/: CSqliteUserService.cpp  CSqliteUserService.h  Dialog.runsettings  IUserService.cpp  IUserService.h  NewUserDialog.cpp  NewUserDialog.h  NewUserDialog.ui  UserManagementWidget.cpp  UserManagementWidget.h  UserManagementWidget.ui
src/Src/CBAService/: CBAMainWidget.cpp  CBAMainWidget.h  CBAMainWidget.ui  CMakeLists.txt  main.cpp
src/Src/main/: CBASettingWidget.cpp  CBASettingWidget.h  CBASettingWidget.ui
